fixed various layout bugs + logging bugs

--- a/Source/OnlineDiary/Frontend/client/src/features/journal/PublicJournals.css
+++ b/Source/OnlineDiary/Frontend/client/src/features/journal/PublicJournals.css
@@ -46,6 +46,7 @@
     flex-grow: 1;
     overflow-y: auto;
     padding: 1em;
+    margin-top: 205px !important;
 }
 
 .public-journals-container {
